# shopping-list

./: Cargo.toml  README.md
src/: main.rs
src/domain/shopping/: list.rs  mod.rs
src/es/: event.rs  mod.rs
