[package]
name = "shopping-list"
version = "0.1.0"
authors = ["Narciso Benigno <narciso.benigno@indebted.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cqrs-es = "0.0.18"
postgres-es = "0.0.18"

serde = { version = "1.0.104", features = ["derive"]}
serde_json = "1.0"
postgres = {version = "0.15.2", features = ["with-serde_json"]}
postgres-shared = "0.4.2"
chrono = "0.4.11"
